<resources>
    <string name="app_name">Nostalijar</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="preferences">Preferences</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="end_of_the_week">End of the Week</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="the_good_ol_days">The good ol\' days</string>
    <string name="view">View</string>
    <string name="your_most_recent_time_capsule">Your most recent time capsule</string>
    <string name="todo">TODO</string>
    <string name="will_be_ready_in">will be ready in...</string>
    <string name="time_capsule_name"></string>
    <string name="create">Create</string>
    <string name="create_a_time_capsule">Create a time capsule</string>
    <string name="insert_title_here">Insert title here</string>
    <string name="title_of_time_capsule">Title of time capsule</string>
    <string name="images">Images</string>
    <string name="user_images">user images</string>
    <string name="caption_of_time_capsule">Caption of time capsule</string>
    <string name="insert_caption_here">Insert caption here</string>
    <string name="set_date_and_time">Set Date and Time</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="insert_time">Insert time</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="done">Done</string>
    <string name="share">Share</string>
    <string name="your_memories_from_the_week">Your memories from the week</string>
    <string name="image_placeholder">image placeholder</string>
    <string name="title_details_long">Time capsule details</string>
    <string name="title_details">Details</string>
    <string name="title_open">Open</string>
    <string name="title_create_long">Create a time capsule</string>
    <string name="title_create">Create</string>
    <string name="timer_end_text">Time to see your capsule!</string>
    <string name="channel_name">Time Capsule Notifications</string>
    <string name="channel_description">Notifications when the time capsule is ready to be opened.</string>
    <string name="notification_channel_id">time_capsule_channel_id</string>
</resources>